Resolve "Move Dark mode button"

--- a/client/src/components/navbar/LoginButton.module.scss
+++ b/client/src/components/navbar/LoginButton.module.scss
@@ -1,6 +1,10 @@
 @use 'Navbar.module.scss';
 @use '../../styles/breakpoints.scss';
 
+.loginText {
+  font-size: 18px;
+}
+
 @media screen and (width <= breakpoints.$s) {
   .loginText {
     display: none;
